src/objects/EMP_Training_Assistant__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMP_Training_Assistant_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMP Training Assistant Member</label>
        <referenceTo>EMP_Organization_Member__c</referenceTo>
        <relationshipLabel>EMP Training Assistants</relationshipLabel>
        <relationshipName>EMP_Training_Assistants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMP_Training_Assistant__c</fullName>
        <label>EMP Training Assistant</label>
        <referenceTo>EMP_Training__c</referenceTo>
        <relationshipLabel>EMP Training Assistants</relationshipLabel>
        <relationshipName>EMP_Training_Assistants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <label>Identification Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_Document_Type__c</fullName>
        <label>Identity Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>CC: Cédula de Ciudadania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI: Tarjeta de Identidad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productive_Sector__c</fullName>
        <label>Productive Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Tomate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frijol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plantulacion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compostaje</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Training Assistants</relationshipLabel>
        <relationshipName>EMP_Training_Assistants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <label>Village</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mujeresAsistentes__c</fullName>
        <label>mujeresAsistentes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>numeroAsistentes__c</fullName>
        <label>numeroAsistentes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rubroProductivo__c</fullName>
        <label>rubroProductivo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>EMP Training Assistant</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EMP Training Assistant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Training Assistants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>